fixed search button spacing problem

--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -56,4 +56,19 @@
   #nav-input{
     width: 80vw;
   }
+  .align-search-btn{
+    left: -9%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .align-search-btn{
+    left: -6%;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .align-search-btn{
+    left: -5%;
+  }
 }
